pratique/2012-p2-f2-album/2012-p2-f2-album-comp.txt
2012-p2-f2-album.cpp: In function ‘int main()’:
2012-p2-f2-album.cpp:11:26: error: ‘max’ was not declared in this scope; did you mean ‘std::max’?
   11 |         (L1 + L2 <= X && max(H1, H2) <= Y) || (H1 + H2 <= X && max(L1, L2) <= Y) ||
      |                          ^~~
      |                          std::max
In file included from /usr/include/c++/11/bits/char_traits.h:39,
                 from /usr/include/c++/11/ios:40,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2012-p2-f2-album.cpp:2:
/usr/include/c++/11/bits/stl_algobase.h:300:5: note: ‘std::max’ declared here
  300 |     max(const _Tp& __a, const _Tp& __b, _Compare __comp)
      |     ^~~
